cmake_minimum_required (VERSION 2.8.10)
PROJECT (HDFJAVA_TEST)

ADD_SUBDIRECTORY(${HDFJAVA_TEST_SOURCE_DIR}/hdf5lib     hdf5lib)
ADD_SUBDIRECTORY(${HDFJAVA_TEST_SOURCE_DIR}/object      object)
ADD_SUBDIRECTORY(${HDFJAVA_TEST_SOURCE_DIR}/object/misc      object/misc)
ADD_SUBDIRECTORY(${HDFJAVA_TEST_SOURCE_DIR}/modules      modules)
if (NOT HDF_SKIP_GUI_TESTS)
  ADD_SUBDIRECTORY(${HDFJAVA_TEST_SOURCE_DIR}/uitest      uitest)
endif (NOT HDF_SKIP_GUI_TESTS)
