cmake_minimum_required (VERSION 2.8.10)
PROJECT (HDFJAVA_EXAMPLES)

add_subdirectory (${HDFJAVA_EXAMPLES_SOURCE_DIR}/datasets     datasets)
add_subdirectory (${HDFJAVA_EXAMPLES_SOURCE_DIR}/datatypes   datatypes)
add_subdirectory (${HDFJAVA_EXAMPLES_SOURCE_DIR}/groups      groups)
add_subdirectory (${HDFJAVA_EXAMPLES_SOURCE_DIR}/intro       intro)
